--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</form>
 	<button class="startGame button" onclick="startGame()">Start Game</button
 	<div class="row">
-		<!-- Dice images -->
+		<!-- Dice images go here -->
 		<div class="dice"> 
 			<img src="images/1.png" id="die1" data-number="0" onclick="diceClick(this)">
 			<img src="images/2.png" id="die2" data-number="1" onclick="diceClick(this)">
